# pooch

./: LICENSE.md  README.md  docker-compose.yml
admin-portal/: Dockerfile  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.ts
admin-portal/src/: App.tsx  index.css
admin-portal/src/components/layout/: Layout.tsx
admin-portal/src/hooks/: useAuth.tsx
admin-portal/src/lib/: api.ts  utils.ts
admin-portal/src/pages/: DashboardPage.tsx  LoginPage.tsx  ProductFormPage.tsx  ProductsPage.tsx
admin-portal/src/types/: index.ts
android/: settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  seed.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/middleware/: auth_deps.py
backend/app/models/: __init__.py  models.py
backend/app/routers/: admin.py  auth.py  scans.py
backend/app/schemas/: schemas.py
backend/app/services/: auth.py  recommendation.py  storage.py
backend/tests/: test_recommendation.py
ios/PoochScan/: .gitignore
ios/PoochScan/PoochScan/: PoochScanApp.swift
ios/PoochScan/PoochScan.xcodeproj/: PoochScan.xcconfig  project.pbxproj
ios/PoochScan/PoochScan.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/PoochScan/PoochScan/Models/: AuthResponse.swift  Dog.swift  PaginatedResponse.swift  Product.swift  RegisterRequest.swift  ScanRecord.swift  ScanResponse.swift  (+1 more)
(+118 files in other folders)
