[project]
name = "backend"
version = "0.1.0"
description = "Backend for Pooch Scan"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.13.3",
    "bcrypt==4.0.1",
    "boto3==1.35.27",
    "boto3-stubs~=1.35.27",
    "email-validator==2.1.0",
    "fastapi==0.115.0",
    "httpx==0.27.2",
    "passlib[bcrypt]==1.7.4",
    "pillow==10.4.0",
    "psycopg2-binary==2.9.9",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.12",
    "redis==5.1.1",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]
