[project]
name = "backend"
version = "0.1.0"
description = "Backend for Pooch Scan"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.16.5",
    "bcrypt==4.3.0",
    "boto3==1.42.51",
    "boto3-stubs~=1.42.51",
    "email-validator==2.3.0",
    "fastapi[standard]==0.128.8",
    "httpx==0.28.1",
    "passlib[bcrypt]==1.7.4",
    "pillow==11.3.0",
    "psycopg2-binary==2.9.11",
    "pydantic==2.12.5",
    "pydantic-settings==2.11.0",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "python-dotenv==1.2.1",
    "python-jose[cryptography]==3.5.0",
    "python-multipart==0.0.20",
    "redis==7.0.1",
    "sqlalchemy==2.0.46",
    "uvicorn[standard]==0.39.0",
]
